--- a/src/validation-form/css/style.css
+++ b/src/validation-form/css/style.css
@@ -12,6 +12,20 @@
     float: right;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+.text-muted {
+    margin: 20px 0;
+    text-align: right;
+}
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
